# aws-greengrass-lite

./: .clang-format  .cmake-format.json  .cspell.json  .gitignore  CMakeCache.txt  CMakeLists.txt  Containerfile  README.md  RELEASE_NOTES.md  config.db  dependencies.json  fc_deps.json  flake.nix  lintChanges.patch
.githooks/: pre-commit
.github/: .cSpellWords.txt  uat-ignore.txt
.github/workflows/: build-packages-multi-platform-container-qemu.yml  build.yml  ci.yml  cmake-multi-platform.yml  deb-packaging-multi-arch.yml  feature-branch-packaging.yml  format.yml  lints.yml  pipeline.yml  snap-packaging.yml  static.yml  uat-pytest.yml  uat-pytests.yml  uat.yml  update.yml
Requirements/: buffer_requirements.md  compatibility_requirements.md  lifecycle_requirements.md  list_requirements.md  nucleus_requirements.md
benchmark/: README.md  REPORT.md
benchmark/scripts/: cloud-setup.env.example  provision-device.sh
bins/ggdeploymentd/: CMakeLists.txt
cloud-logger/: CMakeLists.txt  README.md  recipe.yml
cloud-logger/include/: cloud_logger.h
cloud-logger/src/: read_logs.c
configtest/: configtest.c
configtest/src/: configtest.c
core-bus-gghealthd/src/: gg_healthd.c
docs/: .$lifecycle_fsm.drawio.bkp  .$nucleus_lifecycle.drawio.bkp  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  PKCS11_SUPPORT.md  Provisioning.md  RECIPE_SUPPORT_CHANGES.md  SETUP.md  SNAP.md  TES.md  TPM_SUPPORT.md  ggl-cli.md  lifecycle fsm.drawio  nucleus_lifecycle.drawio
docs/design/: fleet-provisioning.md  gg-architecture.md  gg-fleet-statusd.md  ggconfigd.md  ggdeploymentd-design.md  gghealthd-design.md  iotcored.md  log-trail.md  overview.md  policy-validation.md  tracing.md
docs/examples/: sample_nucleus_config.yaml
docs/fleet_provisioning/: fleet_provisioning.md  generate_claim_tpm.sh
docs/spec/: tls_helper.md
eventstream/src/: eventstream.c
fleet-provisioning/include/: fleet-provisioning.h
fleet-provisioning/src/: database_helper.h  entry.c  fleet-provision.c  fleet-provision.h  generate_certificate.c  generate_certificate.h
fleetProvision/: ggl.mk
fleetProvision/src/: fleetProvision.h  generate_certificate.c  main.c
gdb-extensions/: greengrass-lite.py
gg-fleet-statusd/src/: args.h  bus_server.c  entry.c  fleet_status_service.c  fleet_status_service.h  main.c
ggconfigd/: CMakeLists.txt
ggconfigd/include/: ggconfigd.h
ggconfigd/src/: config.c  db_corebus.c  db_interface.c  embeds_list.h  ggconfig.h  ggconfigd.c  helpers.c  helpers.h  main.c
ggconfiglib/: ggl.mk
ggconfiglib/include/: ggconfig.h
ggconfiglib/src/: config.c  ggconfigd.c  main.c
ggconfiglib/test/: gglib_test.c  main.c  readme.md
ggdeploymentd/: CMakeLists.txt  ggl.mk
ggdeploymentd/src/: args.h  bootstrap_manager.c  bootstrap_manager.h  bus_server.c  bus_server.h  component_manager.c  component_manager.h  component_model.h  component_store.c  component_store.h  dataplane_manager.c  dataplane_manager.h  dependency_resolver.c  dependency_resolver.h  deployment_configuration.c  deployment_configuration.h  deployment_handler.c  deployment_handler.h  deployment_model.h  deployment_queue.c  (+10 more)
gghttplib/: ggl.mk
gghttplibtest/: CMakeLists.txt
ggipcd/: CMakeLists.txt
ggl-file/: CMakeLists.txt
ggl-http/: CMakeLists.txt
include/: cpp_api.h  util.h
misc/: dictionary.txt  iwyu_mappings.yml
nucleus/: CMakeLists.txt
plugin_api/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/IPCServer/: CMakeLists.txt  IPCSocket.hpp  main.cpp
plugins/cli_server/: CMakeLists.txt  main.cpp
plugins/cli_server/src/: cli_server.cpp  cli_server.hpp  darwin_platform.hpp  platform.hpp  unix_platform.hpp  windows_platform.hpp
plugins/cloud_downloader/: CMakeLists.txt  main.cpp
plugins/cloud_downloader/recipes/: local.plugins.discovered.cloud_downloader-0.1.0.yaml
plugins/cloud_downloader/src/: cloud_downloader.cpp  cloud_downloader.hpp
plugins/cloud_downloader/tests/: test_cloud_downloader.cpp  test_util.hpp
plugins/deployment_broker/: CMakeLists.txt  main.cpp
plugins/deployment_broker/src/: deployment_broker.cpp  deployment_broker.hpp
plugins/deployment_plugin/: CMakeLists.txt
plugins/example_mqtt_sender/: CMakeLists.txt  main.cpp
plugins/example_mqtt_sender/include/: example_mqtt_sender.hpp
plugins/example_mqtt_sender/src/: example_mqtt_sender.cpp  example_mqtt_sender.hpp
plugins/example_mqtt_sender/tests/: test_mqtt_pub_sub.cpp  test_mqtt_sender.cpp  test_util.hpp
plugins/gen_component_loader/: CMakeLists.txt
plugins/gen_component_loader/src/: gen_component_loader.cpp  gen_component_loader.hpp
plugins/gen_component_loader/src/platform_abstraction/linux/: process_manager.cpp
plugins/gen_component_loader/tests/: test_gen_component_loader.cpp  test_util.hpp
plugins/ipc/: CMakeLists.txt  README.md  main.cpp
plugins/ipc/include/: IPCSocket.hpp  adapter.hpp  event_stream.hpp  ipc_plugin.hpp  rpc_server.hpp  server_connection.hpp  server_listener.hpp
plugins/ipc/src/: adapter.cpp  basic_server.cpp  event_stream.cpp  ipc_plugin.cpp  rpc_server.cpp  server_connection.cpp  server_listener.cpp
plugins/tes_http_server_plugin/: CMakeLists.txt  main.cpp
plugins/tes_http_server_plugin/recipes/: local.plugins.discovered.tes_http_server_plugin-0.1.0.yaml
plugins/tes_http_server_plugin/src/: main.cpp  tes_http_server.cpp  tes_http_server.hpp
profiles/: debug.mk
recipe2unit/: main.py  recipe.yml
recipie2unit/: main.py  recipe.yml
scripts/: build-snap.sh
setup/: nucleus_config.yml
snap/: snapcraft.yaml
src/nucleus-core/: CMakeLists.txt
src/nucleus-core/api/: main.cpp  tasks.cpp
src/nucleus-core/config/: config_manager.cpp  config_manager.h  config_reader.cpp  config_reader.h  json_helper.cpp  json_helper.h  transaction_log.cpp  transaction_log.h  watcher.h  yaml_helper.cpp  yaml_helper.h
src/nucleus-core/data/: shared_list.cpp  shared_struct.cpp  struct_model.h
src/nucleus-core/lifecycle/: kernel.cpp
src/nucleus-core/util/: commitable_file.cpp  commitable_file.h
tes-http-serverd/: tes-http-serverd.md
tesd/: CMakeLists.txt
utils/: dictionary.txt
(+530 files in other folders)
